Navbar jump fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,12 +20,14 @@ img {
 
 html {
   scroll-behavior: smooth;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .stop-scrolling {
-  height: 100vh;
-  overflow: hidden;
-  margin: 0 0 1px;
+  overflow-y: hidden;
 }
 
 @font-face {
@@ -1018,6 +1020,7 @@ header {
   padding: 8rem 3.4vh 0;
   display: block;
   z-index: 50;
+  overflow-y: hidden;
   background-color: rgba(20, 20, 20, 0.98);
 }
 
